# ClipPal

./: .gitignore  Cargo.toml  LICENSE  README.md  VIP功能实现方案.md  latest.json  package-lock.json  package.json
clipboard-listener/: Cargo.toml
clipboard-listener/src/: lib.rs
docs/: final-refactoring-design.md  lightweight-refactoring-plan.md
fronted/: index.html  package.json  vite.config.ts
fronted/src/: App.vue  main.ts
fronted/src/assets/icons/iconfont/: iconfont.css  iconfont.js  iconfont.json
fronted/src/components/: ClipCard.vue  MessageBar.vue  ScrollContainer.vue  SettingsDialog.vue
frontend/: package.json  tsconfig.json
frontend/src/: App.vue  main.ts
frontend/src/assets/icons/iconfont/: iconfont.css  iconfont.js  iconfont.json
frontend/src/assets/styles/: global.css  highlight.css
frontend/src/components/: ClipCard.vue  LoginDialog.vue  MessageBar.vue  PaymentMethodDialog.vue  QRCodeDialog.vue  ScrollContainer.vue  SettingsDialog.vue  SmartContentDisplay.vue  TutorialGuide.vue  UpdateDialog.vue  UserInfoDialog.vue  UserMenu.vue  VipAccountDialog.vue  VipUpgradeDialog.vue
frontend/src/styles/: responsive.css
frontend/src/types/: global.d.ts
frontend/src/utils/: api.ts  contentDetector.ts  dynamicVirtualScroll.ts  memoryManager.ts  responsive.ts  userStore.ts  vipStore.ts  virtualScroll.ts
src-tauri/: Cargo.toml  Info.plist  app_config.toml  config.json  config.toml  log4rs.yaml  package.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_paste.rs  clip_board.rs  clip_board_listener.rs  errors.rs  global_shortcut.rs  init.rs  lib.rs  log_config.rs  main.rs  menu.rs  protocol_handler.rs  single_instance.rs  sqlite_storage.rs  tray.rs  updater.rs  window.rs
src-tauri/src/api/: cloud_sync_api.rs  mod.rs  user_auth_api.rs  vip_api.rs
src-tauri/src/biz/: clip_async_queue.rs  clip_board.rs  clip_board_sync.rs  clip_record.rs  clip_record_clean.rs  clip_record_sync.rs  cloud_sync_timer.rs  content_processor.rs  content_search.rs  content_search_bin.rs  copy_clip_record.rs  download_cloud_file.rs  file_sync_timer.rs  mod.rs  query_clip_record.rs  simple_search_bin.rs  sync_time.rs  system_setting.rs  tokenize_bin.rs  tokenize_save_bin.rs  update_checker.rs  upload_cloud_timer.rs  user_auth.rs  vip_checker.rs  vip_management.rs
src-tauri/src/utils/: aes_util.rs  app_config.rs  app_secret_key.rs  async_queue_util.rs  config.rs  device_info.rs  file_dir.rs  file_ext.rs  http_client.rs  lock_utils.rs  mod.rs  path_utils.rs  retry_helper.rs  secure_store.rs  token_manager.rs  tokenize_util.rs
src/assets/styles/: global.css
src/components/: ScrollContainer.vue
tauri-plugin-clipboard-pal/: Cargo.toml  README.md  package.json
tauri-plugin-clipboard-pal/permissions/autogenerated/: reference.md
tauri-plugin-clipboard-pal/src/: desktop.rs  lib.rs
