[workspace]
members = ["src-tauri", "tauri-plugin-clipboard-pal", "clipboard-listener"]
resolver = "3"

[workspace.package]
authors = ["jingchuan"]
description = "A ClipPal App"
edition = "2021"
version = "1.0.3"
license = "MIT"
repository = "https://github.com/1750777402/ClipPal"
homepage = "https://github.com/1750777402/ClipPal"
keywords = ["clipboard", "tauri", "desktop", "productivity"]
categories = ["gui", "os", "development-tools"]

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"

[workspace.lints.clippy]
# 基本的 clippy 配置，不要过于严格
too_many_arguments = "allow"
module_name_repetitions = "allow"

[workspace.dependencies]
anyhow = "1.0" 
async-channel = "2.3.1" 
async-trait = "0.1" 
aes-gcm = "0.10"        # AES-256-GCM 加解密
aes = "0.8"
rand = "0.9"
base64 = "0.22.1" #base64编码
bincode = "2.0.1"
charabia = "0.9.6" 
clipboard-rs = "0.2.1" #粘贴板工具
directories = "6" #目录操作
dashmap = "6.1"
image = "0.25.1" 
md5 = "0.7.0" 
rbatis = {version = "=4.5"} 
rbdc-sqlite = {version = "=4.5"} 
rbs = {version = "=4.5"} 
serde = {version = "1", features = ["derive"]} 
serde_json = "1" 
serde_yaml = "0.9.33"
state = {version = "0.6.0"} 
tauri = {version = "=2.6.0", features = ["tray-icon", "image-png"]} 
tauri-plugin-dialog = "2" 
tauri-plugin-http = "=2.4.4" 
tauri-plugin-opener = "2" 
tauri-plugin-single-instance = "2" 
thiserror = "2" 
tokio = {version = "1.0", features = ["full"]} 
uuid = "1"
sha2 = "0.10"
config = "0.15"
rust-argon2 = "2.1"
lazy_static = "1.4"
once_cell = "1.19.0"
log = "0.4"
log4rs = "1.3"
env_logger = "0.11.8"

# Platform-specific dependencies (versions only, features defined in individual crates)
windows = "0.58"
cocoa = "0.26.0"
objc = "0.2.7"
core-graphics = "0.24.0"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"

# Build dependencies
tauri-build = "2"
tauri-plugin = "2.0.2"
