[package]
authors = {workspace=true}
description = "A ClipPal App"
edition = {workspace=true}
name = "clipboard-listener"
version = {workspace=true}

[lib]
lib="src/lib.rs"

[dependencies]
serde = {workspace=true}
serde_json = {workspace=true}
tokio = {workspace=true}
async-channel = {workspace=true}
async-trait = {workspace=true}