[package]
authors = {workspace=true}
description = "监听器插件"
edition = {workspace=true}
name = "clipboard-listener"
version = {workspace=true}

[lib]
lib="src/lib.rs"

[dependencies]
serde = {workspace=true}
serde_json = {workspace=true}
tokio = {workspace=true}
async-channel = {workspace=true}
async-trait = {workspace=true}
log = {workspace=true}