[package]
name = "clipboard-listener"
version = { workspace = true }
authors = { workspace = true }
description = "Clipboard listener plugin for ClipPal"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
serde = {workspace=true}
serde_json = {workspace=true}
tokio = {workspace=true}
async-channel = {workspace=true}
async-trait = {workspace=true}
log = {workspace=true}