[package]
authors = ["you"]
description = "A ClipPal App"
edition = "2021"
name = "ClipPal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "clip_pal"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2.2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-http = "2.4.3"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
tauri-plugin-clipboard-pal = { path = "../tauri-plugin-clipboard-pal"}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
