[package]
authors = {workspace=true}
description = "A ClipPal App"
edition = {workspace=true}
name = "ClipPal"
version = {workspace=true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "clip_pal"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = {workspace=true}
uuid = { workspace = true}
rbs = { workspace = true }
rbatis = { workspace = true }
rbdc-sqlite = { workspace = true }
tauri = {workspace = true , features = ["tray-icon", "image-png"] }
tauri-plugin-http = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-clipboard-pal = { path = "../tauri-plugin-clipboard-pal" }
clipboard-listener = { path = "../clipboard-listener" }
state = {workspace = true}
md5 = { workspace = true}
base64 = { workspace = true}
anyhow = { workspace = true}

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
