[package]
name = "ClipPal"
version = { workspace = true }
authors = { workspace = true }
description = "ClipPal main application"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "clip_pal"

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = {workspace=true}
uuid = { workspace = true}
rbs = { workspace = true }
rbatis = { workspace = true }
rbdc-sqlite = { workspace = true }
tauri = {workspace = true , features = ["tray-icon", "image-png"] }
tauri-plugin-http = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-clipboard-pal = { path = "../tauri-plugin-clipboard-pal" }
clipboard-listener = { path = "../clipboard-listener" }
state = {workspace = true}
md5 = { workspace = true}
base64 = { workspace = true}
anyhow = { workspace = true}
directories = { workspace = true}
dashmap = { workspace = true}
aes-gcm = { workspace = true}
rand = { workspace = true}
env_logger = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
log4rs = { workspace = true }
thiserror = { workspace = true }
# Bloom filter 用于高效搜索
bloomfilter = { workspace = true }
# 文本处理和分词
regex = { workspace = true }
bincode = { workspace = true }
async-channel = { workspace = true }
chrono = { workspace = true }
backon = { workspace = true }

# Windows API for auto-paste functionality
[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading"
] }

# macOS API for auto-paste functionality
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { workspace = true }
objc = { workspace = true }
core-graphics = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = { workspace = true }
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-window-state = { workspace = true }
