[package]
name = "tauri-plugin-clipboard-pal"
version = {workspace=true}
authors = {workspace=true}
description = ""
edition = {workspace=true}
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-clipboard-pal"

[lib]
lib="src/lib.rs"

[dependencies]
tauri = { workspace = true}
serde = { workspace = true}
thiserror = { workspace = true}
clipboard-rs = { workspace = true}
base64 = { workspace = true}
image = { workspace = true}

clipboard-listener = {version = "0.1.0", path = "../clipboard-listener"}

[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
