[package]
name = "tauri-plugin-clipboard-pal"
version = { workspace = true }
authors = { workspace = true }
description = "Tauri clipboard plugin for ClipPal"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-clipboard-pal"

[dependencies]
tauri = { workspace = true}
serde = { workspace = true}
thiserror = { workspace = true}
clipboard-rs = { workspace = true}
base64 = { workspace = true}
image = { workspace = true}
tokio = { workspace = true}
serde_json = { workspace = true}
log = { workspace = true}

clipboard-listener = {path = "../clipboard-listener"}

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }
